--- a/templates/footer.htm
+++ b/templates/footer.htm
@@ -10,29 +10,29 @@
 <li><a href="/quicklist?cat=17"  >Inverts</a></li>
 <li><a href="/quicklist?cat=2"  >Reef Packages</a></li>
 <li><a href="/quicklist?cat=3"  >Aquarium Supplies</a></li>
-<li><a href="/quicklist?cat=11"  >Gidt Certificates</a></li>
+<li><a href="/giftcert"  >Gift Certificates</a></li>
 </ul>
 
 </div>
-<div class="float-left wid177"><div class="float-left wid150">
+<div class="float-left wid177"><div class="float-left wid187">
 <ul class="footerlist" >
   <span class="footertitle">SAVE</span>
-<li class="padtop24"><a href="/quicklist?cat=224"  >Saltwaterfish on Sale</a></li>
-<li><a href="/quicklist?cat=222"  >Sale Corals</a></li>
-<li><a href="/quicklist?cat=203"  >Invert on Sales</a></li>
-<li><a href="/quicklist?cat=223"  >Reef Packages on Sale</a></li>
-<li><a href="/category?id=197"  >Aquarium Supplies on Sale </a></li>
+<li class="padtop24"><a href="/onsale?id=224"  >Saltwaterfish on Sale</a></li>
+<li><a href="/onsale?id=222"  >Sale Corals</a></li>
+<li><a href="/onsale?id=203"  >Invert on Sales</a></li>
+<li><a href="/onsale?id=223"  >Reef Packages on Sale</a></li>
+<li><a href="/onsale?id=197"  >Aquarium Supplies on Sale</a></li>
 <li><a href="/pages?pageid=91">Specials</a></li>
 </ul>
 
 </div></div>
 <div class="float-left wid122"><div class="float-left wid150">
 <ul class="footerlist">
-  <span class="footertitle">SERCIVE</span>
+  <span class="footertitle">SERVICE</span>
 <li class="padtop24"><a href="/pages?pageid=45"  >Shipping</a></li>
 <li><a href="/contactus"  >Contact Us</a></li>
 <li><a href="/pages?pageid=39"  >Returns</a></li>
-<li><a href="/reefpackages"  >Reef Rewards</a></li>
+<li><a href="/pages?pageid=43"  >Reef Rewards</a></li>
 <li><a href="/termsconditions"  >Terms and Condition</a></li>
 <!--<li><a href="guaranteeinfo.htm">Guarantee Info</a></li>-->
 </ul>
@@ -57,7 +57,7 @@
 <div class="float-left wid257">
 <div align="left" class="txt1 clr padtop30 padbottom10">Friend and Follow us on:</div>
 <div align="left" class="txt1 clr padtop7">
-<img src="misc/images/face-icon.jpg" />&nbsp;<img src="misc/images/twitter.jpg" />&nbsp;<img src="misc/images/utube.jpg" />&nbsp;<img src="misc/images/g+.jpg" />
+<a href="http://www.facebook.com/pages/Saltwaterfishcom/109441105204" target=blank><img src="misc/images/face-icon.jpg" /></a>&nbsp;<a href="http://twitter.com/SaltwaterfishCo" target=blank><img src="misc/images/twitter.jpg" /></a>&nbsp;<a href="http://www.youtube.com/user/SaltwaterFishVideos" target=blank><img src="misc/images/utube.jpg" /></a>&nbsp;<g:plusone size="small"></g:plusone>
 </div>
 <div align="left" class="sign clr">Sign up for <span>Email</span></div>
 <div class="sign-box clr padtop5">
@@ -86,3 +86,14 @@ Copyright 2013 Saltwaterfish.com  All Rights Reserved</div>
 
 </body>
 </html>
+<!-- Place this tag where you want the +1 button to render. -->
+
+
+<!-- Place this tag after the last +1 button tag. -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
