--- a/templates/reefpackage.htm
+++ b/templates/reefpackage.htm
@@ -20,8 +20,8 @@ $(document).ready(function(){
 		});	
 	});
 	
-	alert(total+'=='+tprice)
-	$("#totalamt").html(tprice);
+	//alert(total+'=='+tprice)
+	//$("#totalamt").html(tprice);
   });
  
 	
@@ -70,7 +70,7 @@ $(document).ready(function(){
 <div class="clr">
 <div class="float_left blue_text"><strong>Cost:</strong></div>
 <div class="float_right"><span class="dollar">$</span>
-  <input type="text" value="" size="1"></div>
+  <input type="text" value="" size="1" readonly></div>
 <div class="clr"></div>
 </div>
 </div>
