--- a/templates/registration.htm
+++ b/templates/registration.htm
@@ -159,7 +159,7 @@ FORM_MESSAGES = {
 
 
 
-</div></div>
+</div> 
 {% comment %}
 <div class="width10 float-left">&nbsp;&nbsp;</div>
 <div class="wid748 float-left">
