--- a/misc/tabcontent.css
+++ b/misc/tabcontent.css
@@ -27,7 +27,7 @@ ul.tabs li a
     border: 1px solid #CCC;
     border-bottom-color:#B7B7B7;
     color: #000;
-    background: #F0F0F0 url(tabbg.gif) 0 0 repeat-x;
+    background: #F0F0F0 url(/misc/images/tabbg.gif) 0 0 repeat-x;
     border-radius: 2px 2px 0 0;
     outline:none;
 }
@@ -40,7 +40,7 @@ ul.tabs li a:visited
 ul.tabs li a:hover
 {
     border: 1px solid #B7B7B7;
-    background:#F0F0F0 url(tabbg.gif) 0 -36px repeat-x;
+    background:#F0F0F0 url(/misc/images/tabbg.gif) 0 -36px repeat-x;
 	color: #ec5e00;
 	font-weight:bold
 }
