--- a/templates/ViewCart.html
+++ b/templates/ViewCart.html
@@ -1,165 +1,189 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load tagsfilter %}
 <link type="text/css" rel="stylesheet" href="/misc/css3/style.css" />
-<style>
-.height12 {
-    height: 7px !important;
+ <link type="text/css" rel="stylesheet" href="/misc/myaccount.css" />
+ <link type="text/css" rel="stylesheet" href="/misc/css/style.css" />
+ <style type="text/css">
+ .wid270 {
+    width: 140px !important;
 }
+.wid165 {
+    width: 152px !important;
+}
+.wid240 {
+    width: 140px !important;
+}
+.button33 a {
+    font-family: 'Open Sans',sans-serif;
+    font-size: 10px !important;
+    text-align: center;
+    text-transform: uppercase;
+}
+ .order_left {
+    color: #434343;
+    float: left;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 11px;
+    width: 55%;
+}
+.slide_top1 {
+    background-color: #F79B49;
+    background-image: url("/misc/images/cart-bg1.jpg");
+    background-position: left top;
+    background-repeat: no-repeat;
+    border-bottom: 1px solid #000000;
+    border-top: 1px solid #000000;
+    clear: both;
+    height: 170px;
+    padding-bottom: 1px;
+    padding-top: 2px;
+    width: 660px;
+}
+.cart_bottom {
+    clear: both;
+    padding-top: 10px !important;
+}
+.slide_middle1 {
+    background: -moz-linear-gradient(center top , #FAF8E3, #FFFFFF) repeat scroll 0 0 transparent;
+    height: 173px;
+    margin: -15px auto 0;
+    width: 600px;
+}
+.slide_middle1 li:first-child {
+    border-left: 0 dotted #A5A5A5;
+    float: left;
+    height: 160px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 31%;
+}
+.slide_middle1 li:first-child {
+    margin-left: -30px;
+}
+.slide_middle1 li {
+    border-right: 1px dotted #A5A5A5;
+}
+.slide_middle1 li {
+    border-left: 1px dotted #A5A5A5;
+    float: left;
+    height: 160px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 31%;
+}
+.slide_middle1 li {
+    border-right: 1px dotted #A5A5A5;
+}
+.toggle_right11{ clear:both; width:240px; height:auto; border:1px solid #e4e4e4; padding:5px; margin-left:2px !important;}
+
 </style>
-<div class="float-left width8">&nbsp;&nbsp;</div>
-<div class="float-left wid748">
- 
-<div class="toggle_left2 border">
+ <div class="float-left wid768 padleft5">
+
 {% if error_message %}
   <span class="redtext"><h4> {{error_message}}</h4></span>
 {% endif %}
-{% for item in MyCartItems %}
+{%if MyCartItems|length > 0 %}
+
+<div class="clr">
+<div class="float-left wid470"><div class="toggle_left2 border">
+<div align="left" class="clr master-link padtop10 padbottom10"><span class="padleft17">Home &nbsp;&gt;&nbsp;My Cart</span> <br>
+  <span class="orange-txt2">My Cart</span>
+</div>
+{% for shippingCategory in MyCartItems %}
 <form name="form" method="GET" action="/cartaction">
 {% csrf_token %}
-<input type="hidden" name="itemid" value="{{ item.id }}" size="10" />
 <div class="clr">
 <div class="view_cart_heading carttop-bg">
 <div class="clr card2_100">
-<div class="float_left card2_alignC wid105"><img src="misc/images/fish_img3.png"  /></div>
+<div class="float_left card2_alignC wid140 blue_text_new1"><div class="padtop10">{{shippingCategory.name}}</div></div>
 <div class="float_left card2_alignC wid150"><strong>Description</strong></div>
-<div class="float_left card2_alignC pwid4"><strong>Price</strong></div>
-<div class="float_left card2_alignC wid70"><strong>Quantity</strong></div>
-<div class="float_left card2_alignC wid5"><strong>Subtotal</strong></div>
+<div class="float_left card2_alignC wid100"><strong>Price</strong></div>
+<div class="float_left card2_alignC wid100"><strong>Quantity</strong></div>
+<div class="float_left card2_alignR padright10 wid5"><strong>Subtotal</strong></div>
 <div class="clr"></div>
 </div>
 </div>
+ 
+
+{% for item in shippingCategory.shipping_items %}
 <div class="clr card2_100 padtop10">
-<div class="float_left card2_alignC wid105"><img src="http://www.saltwaterfish.com/{{item.thumbnail}}" width=60 height=60/></div>
-<div class="float_left card2_alignL padleft5 wid150">{{item.name}}<br>{{item.extra_field_3}}</div>
-<div class="float_left orange_text card2_alignC pwid4"><span class="card2_strike">${{item.price|floatformat:2}}<br></span>{% if item.saleprice > 0 %} ${{ item.saleprice|floatformat:2 }} {% endif %}</div>
-<div class="float_left card2_alignC wid70"><input type="text" name="quantity" value="{{ item.quantity }}" size="1" /><br><input type="submit" name="cmdUpdate" value="Update"><br /><input type="submit" name="cmdDelete" value="Delete" onclick="javascript:return confirm('Are you sure you want to delete this item from your cart ?')"></div>
-<div class="float_left card2_alignC wid5">${{item.subtotal|floatformat:2}}</div>
+<input type="hidden" name="itemid" value="{{ item.catalog_id }}" size="10" />
+<div class="float_left card2_alignC wid140 blue_text_new1"><img src="http://www.saltwaterfish.com/{{item.thumbnail}}" width=60 height=60/></div>
+<div class="float_left card2_alignC padleft5 wid150">{{item.item_name}}<br>{{item.extra_fied_3}}</div>
+<div class="float_left orange_text card2_alignC wid100"><span {% if item.saleprice > 0 %}class="card2_strike" {% endif %}>${{item.price|floatformat:2}}<br></span>{% if item.saleprice > 0 %} <span class="orange_text">${{ item.saleprice|floatformat:2 }}</span> {% endif %}</div>
+<div class="float_left card2_alignC wid100"><input type="text" name="quantity" value="{{ item.quantity }}" size="1" /><br><input type="submit" name="cmdUpdate" value="Update"><br /><input type="submit" name="cmdDelete" value="Delete" onclick="javascript:return confirm('Are you sure you want to delete this item from your cart ?')"></div>
+<div class="float_left card2_alignC wid5 padleft7">${{item.subtotal|floatformat:2}}</div>
 <div class="clr"></div>
 </div>
 <div class="clr card2_hor_line"></div>
-
+{% endfor %}
 <div class="clr card2_100 padtop10 padbottom10">
 
-<div class="float_left product_heading card2_58">{% if item.free_shipping_suggestion_val > 0 %}Add ${{item.free_shipping_suggestion_val|floatformat:2}} more to<br> qualify for free shiping!{% endif %}&nbsp;</div>
+<div class="float_left product_heading card2_58" style=" padding-left:40px !important;" ><div class="float_left product_heading card2_58">{% if shippingCategory.freeshipping_diff > 0 %}Add ${{shippingCategory.freeshipping_diff|floatformat:2}} more to<br> qualify for free shiping!{% endif %}&nbsp;</div><br></div>
 
-<div class="float_left padtop10 card2_alignL">
-<table>
+<div class="float_left wid1-130  padtop10 card2_alignL " style=" padding-left:25px !important;" align=right>
+<table width=170 align=right>
 <tr>
 	<td>Subtotal</td>
-	<td>${{item.subtotal|floatformat:2}}</td>
+	<td>${{shippingCategory.shipping_value|floatformat:2}}</td>
 </tr>
 <tr>
    <td>Est.Shipping</td>
-   <td>${{item.shipping|floatformat:2}}</td>
+   <td>${{shippingCategory.shipping_charge|floatformat:2}}</td>
 </tr>
 <tr>
 	<td>Fuel surcharge</td>
-	<td>${{item.fuelcharge|floatformat:2}}</td>
+	<td>${{shippingCategory.fuel_charge|floatformat:2}}</td>
 </tr>
 <tr>
 	<td>Promotions:</td>
 	<td>$0.00</td>
 </tr>
 <tr>
-	<td>{{item.tax|floatformat:2}}% of Tax</td>
-	<td>$<b>{{item.taxvalue|floatformat:2}}</td>
+	<td>{{shippingCategory.tax|floatformat:2}}% of Tax</td>
+	<td>$<b>{{shippingCategory.tax_value|floatformat:2}}</td>
 </tr>
 <tr>
 	<td><b>Supplies Total</b></td>
-	<td>$<b>{{item.total|floatformat:2}}</b></td>
+	<td>$<b>{{shippingCategory.supplies_total|floatformat:2}}</b></td>
 </tr>
 </table>
 </form>
 &nbsp;</div>
 <div class="clr"></div>
 </div>
-<div class="clr card2_hor_line"></div>
-</div>
+ 
  {% empty%}
 Cart is Empty
  {% endfor %}
  
-
-
-<div class="cart_bottom_heading marleftless padtop5" align="left"><strong><font color="#000000">You May Also Like</font></strong></div>
-<div class="slide_top">
-<div class="float-left padleft5 martop150"><img src="misc/images/cart-arrow-left.jpg" /></div>
-<div class="slide_middle1">
-<ul>
-<li>
-<div class="clr">
-<div class="clr"><span class="product_heading">Seachem Reef Carbonate</span><br />250ml</div>
-<div class="clr padtop10">
-<div class="clr"><img src="misc/images/product_img1.jpg" width="93" height="93" border="0" /></div>
-<div class="clr martop10">
-<div class="price padleft50">$3.99</div>
-<div class="clr martop10"><a href="#"><img src="misc/images/add_tant.png" width="97" height="25" border="0" /></a></div>
-</div>
-<div class="more padtop10"><a href="#"><strong>more...</strong></a></div>
-</div>
-<div class="clr">&nbsp;</div>
-</div>
-</li>
-<li>
-<div class="clr">
-<div class="clr"><span class="product_heading">Seachem Reef Carbonate</span><br />300 gram</div>
-<div class="clr padtop10">
-<div class="clr"><img src="misc/images/product_img2.jpg" width="93" height="93" border="0" /></div>
-<div class="clr martop10">
-<div class="price padleft50">$5.99</div>
-<div class="clr martop10"><a href="#"><img src="misc/images/add_tant.png" width="97" height="25" border="0" /></a></div>
-</div>
-<div class="more padtop10"><a href="#"><strong>more...</strong></a></div>
-</div>
-<div class="clr">&nbsp;</div>
-</div>
-</li>
-<li>
-<div class="clr">
-<div class="clr"><span class="product_heading">Seachem Reef Carbonate</span><br />500 ml</div>
-<div class="clr padtop10" >
-<div class="clr"><img src="misc/images/product_img3.jpg" width="93" height="93" border="0" /></div>
-<div class="clr martop10">
-<div class="price padleft50">$3.99</div>
-<div class="clr martop10"><a href="#"><img src="misc/images/add_tant.png" width="97" height="25" border="0" /></a></div>
-</div>
-<div class="more padtop10"><a href="#"><strong>more...</strong></a></div>
-</div>
-<div class="clr">&nbsp;</div>
-</div>
-</li>
-</ul>
-</div>
-<div class="float-right padright5 martop150less"><img src="misc/images/cart-arrow-right.jpg" /></div>
-<div class="clr">&nbsp;</div>
-</div>
-
-
-					
-</div>
-
-
-<div class="float_left card2_27s">
-<div class="toggle_right11">
-<div class="clr">
-<div class="order_left"><div class="order_heading"><font size="3"><strong>Order Details:</strong></font></div></div>
+</div> </div> 
+<div class="clr card2_hor_line"></div>
+ 
+		</div> 
+  
+<div class="float-right">
+ 
+<div class="toggle_right11 wid165">
+<div class=""><div class="order_heading"><font size="2"><strong>Order Details:</strong></font></div></div>
 <div class="clr"></div>
-</div>
+ 
 
-<div class="clr">&nbsp;</div>
+
 <div class="clr">
 <div class="order_left" align="left">Subtotal</div>
 <div class="order_right">
-<div class="float_right">${{SubTotal|floatformat:2}}</div>
+<div class="float_right">${{CartInfo.subtotal|floatformat:2}}</div>
 
 </div>
 <div class="clr"></div>
 </div>
 
 <div class="clr">
-<div class="order_left wid115" align="left">Estimated Shipping</div>
+<div class="order_left  " align="left">Estimated Shipping</div>
 <div class="order_right">
-<div class="float_right">${{ShippingTotal|floatformat:2}}</div>
+<div class="float_right">${{CartInfo.shipping_total|floatformat:2}}</div>
 
 </div>
 <div class="clr"></div>
@@ -168,7 +192,7 @@ Cart is Empty
 <div class="clr">
 <div class="order_left" align="left">Fuel Surcharge</div>
 <div class="order_right">
-<div class="float_right">${{FuelTotal|floatformat:2}}</div>
+<div class="float_right">${{CartInfo.fuelcharge_total|floatformat:2}}</div>
 
 </div>
 <div class="clr"></div>
@@ -177,7 +201,7 @@ Cart is Empty
 <div class="clr">
 <div class="order_left" align="left">Estimated Tax</div>
 <div class="order_right">
-<div class="float_right">${{TaxTotal|floatformat:2}}</div>
+<div class="float_right">${{CartInfo.tax_total|floatformat:2}}</div>
 
 </div>
 <div class="clr"></div>
@@ -186,7 +210,7 @@ Cart is Empty
 <div class="clr padbottom10">
 <div class="order_left" align="left"><span>Promotions Applied</span></div>
 <div class="order_right">
-<div class="float_right"><span>${{PromotionsTotal|floatformat:2}}</span></div>
+<div class="float_right"><span>${{CartInfo.promotions_total|floatformat:2}}</span></div>
 </div>
 <div class="clr"></div>
 </div>
@@ -194,40 +218,67 @@ Cart is Empty
 <div class="clr">
 <div class="order_left" align="left"><strong>ORDER TOTAL</strong></div>
 <div class="order_right">
-<div class="float_right"><strong>${{OrderTotal|floatformat:2}}</strong></div>
+<div class="float_right"><strong>${{CartInfo.order_total|floatformat:2}}</strong></div>
 </div>
 <div class="clr"></div>
 </div>
 {% if MyCartItems %}
-<div class="clr padtop15 padbottom15" align="left"><img src="misc/images/paypal_icon1.jpg" /></div>
-<div class="wid270 pad-tb"><div class="button33">
-{% if not request.session.IsLogin %}
-<a href="/checkoutlogin?gateway=AUTHORIZENET"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
-<div class="clr height1"></div></div>
-<div class="clr padtop5 padbottom10" align="left"><a href="/checkoutlogin?gateway=paypal"><img src="https://www.paypalobjects.com/webstatic/mktg/merchant/pages/express-checkout/express-checkout-hero-sg.png" width="180" height="100px" /></a></div>
+<div class="clr padtop15 padbottom15" align="left"><img width="140" border="0" height="24" src="misc/images/paypal_icon1.jpg"> </div>
+<div class="wid270 pad-tb"><div class="button33 padbottom20">
+{% if request.session.StoreCredit %} 
+  {% if request.session.CartInfo.order_total > 0 %}
+     <a href="/{{NextPage}}?gateway=AUTHORIZENET"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
+  {% else %}
+     <a href="/{{NextPage}}?gateway=None"><font color="#FFFFFF"><strong>Checkout Store Credit</strong></font></a></div>
+  {% endif %}
+{% else %}
+  {% if request.session.CartInfo.order_total > 0 %}
+     <a href="/{{NextPage}}?gateway=AUTHORIZENET"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
+  {% else %}
+     <a href="/{{NextPage}}?gateway=None"><font color="#FFFFFF"><strong>Prmotions Checkout</strong></font></a></div>
+  {% endif %}
+{% endif %}
+ </div>
+<div class="clr    " align="left">
+{% if request.session.StoreCredit %} 
+  {% if request.session.CartInfo.order_total > 0 %}
+     <a href="/{{NextPage}}?gateway=paypal"><img src="https://www.paypalobjects.com/webstatic/mktg/merchant/pages/express-checkout/express-checkout-hero-sg.png" width="140" height="40px" /></a>
+  {% else %}
+     &nbsp;
+  {% endif %}
+{% else %}
+  {% if request.session.CartInfo.order_total > 0 %}
+     <a href="/{{NextPage}}?gateway=paypal"><img src="/misc/images/new-paypal.jpg" width="140" height="40px" /></a>
+  {% else %}
+     &nbsp;
+  {% endif %}
+{% endif %}
 </div>
-{% elif request.session.IsLogin %}
-<a href="/orderconfirmation?gateway=AUTHORIZENET"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
-<div class="clr height1"></div></div>
-<div class="clr padtop5 padbottom10" align="left"><a href="/orderconfirmation?gateway=paypal"><img src="https://www.paypalobjects.com/webstatic/mktg/merchant/pages/express-checkout/express-checkout-hero-sg.png" width="180" height="100px" /></a></div>
-</div>
-{% endif %} <!-- END IF to check Login -->
+ 
 {% endif %} <!-- END IF to check Empty Cart Items -->
-<div class="clr marleft20" >
+<div class="clr " >
+{% if request.session.IsLogin and StoreCredit > 0 %}
 <div class="blue_text1  padtop5 padbottom10 padleft5">Login to View Any Store Credits</div>
 
 <div class="wid240">
 <div class="toggle_right_title" align="left"><font size="3"><strong>Store Credit</strong></font></div>
-<div align="justify" class="clr">You have a store credit of $999.00 available
+<div align="justify" class="clr">You have a store credit of ${{StoreCredit|floatformat:2}} available
 would you like to apply it to this order?</div>
-<div class="clr padtop10" align="left"><a href="#"><img src="misc/images/cart2-apply1.jpg" width="137" height="21" /></a></div>
+<form id="form1" name="form1" method="get" action="/applystorecredit">
+{% csrf_token %}
+<div class="clr padtop10" align="left"><input type="image" src="misc/images/cart2-apply1.jpg" width="137" height="21" name="cmdApplyStoreCredit" {% if request.session.CartInfo.order_total == 0 %} disabled="disabled" {% endif %} />
+ <input type="hidden" name="hdnStoreCredit" value="{{StoreCredit}}"/>
+ <input type="hidden" name="hdnStoreCreditID" value="{{StoreCreditID}}" />
+  </div>
+ </form>
 </div>
+{% endif %}
 
 <form name="CouponForm" method="GET" action="/cartaction">
 <div class="clr">
-<div class="toggle_right_title padtop10 padbottom5" align="left"><font size="3"><strong>Discount Codes</strong></font></div>
+<div class="toggle_right_title wid240 padbottom5" align="left"><font size="3"><strong>Discount Codes</strong></font></div>
 <div align="justify" class="wid240 padbottom5">Enter your coupon code if you have one.<br /></div>
-<input name="txtCoupon" type="text" value="" size="30" />
+<input name="txtCoupon" type="text" value="" size="20" />
 <div class="clr" align="left"><input type="submit" name="cmdApplyCoupon" value="Apply Coupon"/></div>
 </div>
 <div class="padtop20 wid240" align="left"><font color="#FF6600"><strong><font size="3">Promotional Discounts:</font></strong><br />
@@ -237,10 +288,63 @@ You have not yet qualified for this promtion</font></div>
 </form>
 
 </div>
+</div><div class="clr"><div class="cart_bottom">
+<div class="cart_bottom_heading  " align="left">You May Also Like</div>
+
+<div class="slide_top1">
+<div class="slide_middle1">
+<ul>
+{% for items in relateditems %}
+ 
+<li>
+<div class="clr">
+<div class="clr"><span class="product_heading">{{items.name}}</span></div>
+<div class="clr padtop25">
+<div class="float_left"><img width="71" border="0" height="86" src='http://commondatastorage.googleapis.com/swf_product_images/{{  items.thumbnail|strreplace:"assets/images/" }}'></div>
+<div class="float_right ">
+<div class="price-final">${% if items.onsale > 0 %}{{items.saleprice|floatformat:2}}{% else %}{{items.price|floatformat:2}} 
+				{% endif %}</div>
+<div class="clr"><a href="/addtocart?item_id={{ items.catalogid }}"><img border="0" src="misc/images/add_tant.png"></a></div>
+</div>
+</div>
+<div class="clr">&nbsp;</div>
+</div>
+</li>
+{%endfor%}
+ 
+ 
+</ul>
+</div>
+</div>
+					
+ 
+</div></div> 
+</div>
+
+{%else%}
+<div class="clr"></div><br><br>&nbsp;<br>
+<div class="special toggle_right_title padtop10 padbottom5" style="width:62% !important;" align="center">
+<table border="0" width="450" cellspacing="0" cellpadding="4" class="alternative">
+	<tbody><tr>
+		<td class="titles" width="26" align="center"><img src="misc/images/error2.png" align="absmiddle" width="26"></td>
+		<td class="titles" align="left" width="418">View Cart</td>
+	</tr>
+	<tr>
+		<td class="item" colspan="2"> You don't have any products in your shopping cart.</td>
+	</tr>
+	<tr>
+		<td align="left" colspan="2"><!--START: RETURNMESSAGE-->
+			<input type="button" value="Click here to continue" class="btn" onclick="location.href='/';"  >
+			<!--END: RETURNMESSAGE-->
+		</td>
+	</tr>
+</tbody></table>
+
+{%endif%}
 
 </div><div class="clr"></div>
 
 <div class="float-left wid10"></div>
-
+</div>
 </div>
 {% endblock content %}
