--- a/templates/addrequestform.htm
+++ b/templates/addrequestform.htm
@@ -18,7 +18,12 @@
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop5">
 <div class="clr my_account_link"></div>
-<div class="clr orange-txt padtop7 padbottom13">ADD NEW SUPPORT REQUEST</div>
+<div class="float-left wid163">
+<div class="clr my_account_link padtop7 padbottom13"">Home  <span>&gt; My Account</span><span> &gt; Add Request</span></div>
+</div>
+<div class="float-right wid160"><div class="float-left"><img src="misc/images/arro.jpg" /></div>
+<div class="float-right"><span><a href="/mytickets">Click here to go back</a></span></div>
+</div>
 <div class="clr myaccount_bg">
   <div class="clr padtop5">
 <form method="post" action="/generalactions" method=post>
