--- a/templates/editrequestform.htm
+++ b/templates/editrequestform.htm
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+{% load tagsfilter %}
 <style>
 .content-label {
     color: #000000;
@@ -17,73 +17,46 @@
  
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop5">
-<div class="clr my_account_link"></div>
-<div class="clr orange-txt padtop7 padbottom13">REQUEST DETAILS</div>
-<div class="clr myaccount_bg">
+<div class="clr my_account_link">Home  <span>&gt; My Account</span><span> &gt; Support Requests</span></div>
+ <div class="clr my_account_title padtop20 padbottom13">{{crmitems.subject}} </div>
+<div class="clr myaccount_bg1">
   <div class="clr padtop5">
   <table width="100%" border="0" cellpadding="2">
   <tbody><tr>
-    <td class="item"><b>Status:</b> &nbsp;New</td>
-    
+    <td class="item"><b>Status:</b> &nbsp;{% for dep in crmitems.status|crmstatus %} {{dep.statustext}} {% endfor %}</td>
   </tr>
   <tr>
-    <td class="item"><b>Date Opened:</b> &nbsp;{{department.datentime}}</td>
-    
+    <td class="item"><b>Date Opened:</b> &nbsp;{{crmitems.datentime}}</td>
   </tr>
   <tr>
-    <td class="item"><b>Department:</b>&nbsp; General Info</td>
-  
+    <td class="item"><b>Department:</b>&nbsp; {% for item in department %}
+	{%if item.id = crmitems.departmentid %} {{item.department}} {%endif%}
+	{%endfor%}</td>
   </tr>
   <tr>
-    <td class="item"><b>Opened by:</b>&nbsp; Customer</td>
-    
+    <td class="item"><b>Opened by:</b>&nbsp; {{crmitems.customer}}</td>
   </tr>
   <tr>
-    <td class="item"><b>Last Action Date:</b>&nbsp; 5/26/2013</td>
-   
+    <td class="item"><b>Last Action Date:</b>&nbsp; {% for dep in crmitems.id|crmlastmessage %} {{dep.datentime}} {% endfor %}</td>
   </tr>
-
   </tbody></table>
-<form method="post" action="/generalactions" method=post>
+  </div>
+   <div class="clr"></div>
+	<form method="post" action="/generalactions" method=post>
 		{% csrf_token %} 
-		<input type="hidden" name="action" value="addresponse">
-<div class="float-left">
- <div class="clr">
-<div class=" ">
-<div class="clear padtop20">
-<div class="float-left content-label martop5">Department:</div>
-<div class="float-left padleft7"><select name="departmentid" class="textbox">
-{% for item in department %}
-	<option value="{{item.id}}">{{item.department}}
-	{%endfor%}
-</select></div>
-</div>
-<div class="clear padtop20">
-<div class="float-left content-label martop5">Name:</div>
-<div class="float-left padleft7"><input type="text" class="textbox" name="customer" value="{{ request.session.Customer.billing_firstname }} {{ request.session.Customer.billing_lastname }}"  /></div>
-</div>
-<div class="clear padtop20">
-<div class="float-left content-label martop5">E-Mail:</div>
-<div class="float-left padleft7"><input type="text" class="textbox" name="custemail" value="{{ request.session.Customer.email }}"  /></div>
-</div>
-<div class="clear padtop20">
-<div class="float-left content-label martop5">Phone:</div>
-<div class="float-left padleft7"><input type="text" class="textbox" name="phone" value="{{ request.session.Customer.billing_phone }}" /></div>
-</div>
-<div class="clear padtop20">
-<div class="float-left content-label martop5">Subject:</div>
-<div class="float-left padleft7"><input type="text" class="textbox" name="subject"  /></div>
-</div>
-<div class="clear padtop20">
-<div class="float-left content-label martop5">Message:</div>
-<div class="float-left padleft7"><textarea  name="message" rows="5" cols="36"></textarea></div>
-</div>
-</div>
-</div>
- <div class="clr padtop20"><input type=image src="misc/images/submit.jpg" width="76" height="25" border="0" /></div>
- 
-</div>
-</div>
+		<input type="hidden" name="action" value="editcrmresponse">
+		<input type="hidden" name="crmid" value="{{crmitems.id}}">
+		<table width="700" border="0" cellpadding="3" cellspacing="1" bgcolor="#EFEFEF" style="color: #434343 !important;font-size: 12px !important;">
+		  <tr style='background-image: url("/misc/images/content_menu.jpg");height: 31px;'>
+			<td width="300">Description</td>
+		  </tr>
+			{%for rmaitems in crmmessages %}
+			<tr class="{% cycle 'white' 'grey' %}"><td align=left><b>{%if rmaitems.sender > 0 %}You{%else%} Staff{%endif%}:</b><br>{{rmaitems.message|safe}}</td></tr>
+			{%endfor%}
+			<tr bgcolor="#FFFFFF" ><td align=left><br><br><b>Comments:</b><br><textarea name="message" rows="4" cols="62"></textarea></td></tr>
+			<tr bgcolor="#FFFFFF" ><td align=left><input type=image src="misc/images/submit.jpg" width="76" height="25" border="0" /></td></tr>
+		 </table>
+	</form>
 <div class="clr">&nbsp;</div>
 </div>
 
