--- a/templates/header.htm
+++ b/templates/header.htm
@@ -1,76 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"" />
 <title>{{page_title}}</title>
+<meta name="google-site-verification" content="BbwSDh1SDDpdP3_gyoshb1LudI14GjdHTP5GlQyROaw" />
 <link href="/misc/style.css" rel="stylesheet" type="text/css" />
 <link href="/misc/sty.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-.greentext {color: #00CC00; font-size: 12px;}
-.redtext {color: #FF0000; font-size: 12px;}
-label.error { float: none; color: red; padding-left: .5em; vertical-align: top; }
-.style1 {color: #FF0000}
-.promoMsg {
-    background: url("/misc/images/specialBG.png") repeat-x  scroll 0 0 transparent;
-    color: #FFFFFF !important;
-    font-size: 17px;
-    font-weight: bold;
-    text-decoration: none;
-	min-height: 40px;
-	border-right-width: 1px;
-	border-bottom-width: 1px;
-	border-left-width: 1px;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
-	border-right-color: #d2d2d2;
-	border-bottom-color: #d2d2d2;
-	border-left-color: #d2d2d2;
-}
-.promoMsg A, .promoMsg A:visited {
-font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-font-size: 25px;
-color: #FFF !important;
-font-weight: bold;
-text-decoration: underline;
-}
-.superSpecialBG {
-    background: url("/misc/images/super-specialBG.png") no-repeat scroll left top transparent;
-    padding: 57px 0 23px 25px;
-}
-.price2 {
-font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-font-size: 20px;
-color: #ff5200;
-font-weight: bold;
-}
-A.homeSpecials:visited:hover {
-color: #ff6100;
-text-decoration: none;
-}
-.allSpecials {
-padding: 10px 0px 0px 330px;
-}
-
-.signupBG {
-    background: url("/misc/images/signupBG.png") no-repeat scroll left top transparent;
-    height: 170px;
-    padding: 0;
-}
-.free-ship {
-    background: url("/misc/images/shippingBG.png") no-repeat scroll left center transparent;
-    height: 173px;
-    padding: 26px 30px 0 29px;
-}
-</style>
-
+ 
 
 <script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
-
+ {% block css %}
+ {% endblock %}
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -117,7 +61,7 @@ Shipping Rates</div>
 <ul>
 <li><a href="/myaccount">My Account</a></li>
 <li><a href="/ordertracking">Order Status</a></li>
-<li><a href="/shipstatus">Shipping Status</a></li>
+<li><a href="/ordertracking">Shipping Status</a></li>
 <li><a href="/rmaservice">Return Claims</a></li>
 <li><a href="/mywishlist">Wish List</a></li>
 <li><a href="/logout">Logout</a></li>
@@ -133,12 +77,30 @@ Shipping Rates</div>
 </div>
 
 </div>
+<form name="form" id="form" action="/search" method="get">
+{% csrf_token %}
 <div class="clr">
 <div class="float-left"><a href="/"><img src="misc/images/logo.png" width="426" height="93" border="0" /></a></div>
 <div class="float-right marright15">
 <div class="search">
-<div class="search1_box"><input name="Input" type="text"  placeholder="Search saltwaterfish.com"/></div>
-<div class="search1_submit"><input type="submit" name="Submit" value="Search" /></div>
+<div class="search1_box"><input type="text"  placeholder="Search saltwaterfish.com" name="query" /></div>
+<div class="search1_submit"><input type="submit" name="Submit" value="Search" /></form>
+{%comment%}
+<script>
+  (function() {
+    var cx = '017962673971899229735:obihww4qabe';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+{%endcomment%}
+</div>
 </div>
 </div>
 </div>
@@ -251,7 +213,7 @@ Shipping Rates</div>
 </li>
 </ul>
 </li>
-<li><a href="/quicklist?cat=298">Free Shipping Store</a></li>
+<li><a href="/category?id=298">Free Shipping Store</a></li>
 </ul>
 </div>
 </div>
