--- a/templates/waitinglist_popup.htm
+++ b/templates/waitinglist_popup.htm
@@ -2,9 +2,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Saltwaterfish.com | Put me on the waiting list</title>
 <link href="/misc/style.css" rel="stylesheet" type="text/css" />
-<link href="/misc/sty.css" rel="stylesheet" type="text/css" /> <title>Saltwaterfish.com | Put me on the waiting list</title>
+
+<link href="/misc/sty.css" rel="stylesheet" type="text/css" /> <link type="text/css" rel="stylesheet" href="/misc/myaccount.css" />
  </head>
  {% load tagsfilter %}
  
@@ -33,21 +34,21 @@ $(document).ready(function(){
 </script>
 <body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 
-<table width="100%" border="0" align="center" cellpadding="5" cellspacing="0" >
+<table width="400" border="0" align="center" cellpadding="5" cellspacing="0" >
 	<tr>
 		<td><table width="95%" border="0" align="center" cellpadding="0" cellspacing="0">
 				<tr>
-					<td   class="product_heading">Put me on the waiting list</td>
+					<td   class="orange-txt1 clr padtop20 padbottom10 ">Add to Wish List</td>
 				</tr>
 				<tr>
-					<td  class="borders"><img src="/misc/images/account-line.jpg" width="414" height="1" border="0" class="padtop20 padbottom20" /></td>
+					<td><img src="/misc/images/account-line.jpg" width="100%"  height="1" border="0" colspan=2 class="padtop10 padbottom20" /></td>
 				</tr>
 				<tr>
-					<td   class="item" style="padding-top:5; padding-bottom:5">The item you are trying to purchase is currently out of stock.<br>Please enter your name, email, and phone number below.<br> We will contact you as soon as this product is available.</td>
+					<td   style="padding-top:5; padding-bottom:5" colspan=2 >The item you are trying to purchase is currently out of stock.<br>Please enter your name, email, and phone number below.<br> We will contact you as soon as this product is available.</td>
 				</tr>
 				 
 				<tr>
-					<td><img src="/misc/images/account-line.jpg" width="414" height="1" border="0" class="padtop20 padbottom20" /></td>
+					<td><img src="/misc/images/account-line.jpg" width="414" height="1" border="0" colspan=2 class="padtop20 padbottom20" /></td>
 				</tr>
 			</table>
 			<!--START: notifyBlock-->
